--- a/app/config/config.neon
+++ b/app/config/config.neon
@@ -9,16 +9,16 @@ parameters:
 php:
 	date.timezone: Europe/Prague
 
+extensions:
+    cronner: stekycz\Cronner\DI\CronnerExtension
 
 application:
 	errorPresenter: Error
 	mapping:
 		*: App\*Module\Presenters\*Presenter
 
-
 session:
 	expiration: 14 days
-
 
 services:
 	router: App\RouterFactory::createRouter
@@ -27,3 +27,8 @@ services:
 
 tracy:
 	maxDepth: 10
+
+cronner:
+    timestampStorage: stekycz\Cronner\TimestampStorage\FileStorage(%appDir%/../temp/cronner)
+    tasks:
+        - App\Tasks\IndexerTask
